src/Sass/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@import 'config';

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Inter', sans-serif;
}

html,
body {
  min-height: 100vh;
  width: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  scroll-behavior: smooth;
  background: $background;
  color: $white;
}

// custom scroll bar

// width
::-webkit-scrollbar {
  width: 5px;
}

// Track
::-webkit-scrollbar-track {
  background: $white;
}

// handle
::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 50px;
}

// handle on hover
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

#root {
  min-height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
}

input:focus-within {
  border-bottom: 1px solid $iconNavLinks;
}

.icon-nav:hover {
  fill: $iconNavLinks;
  transition: fill 300ms ease-in-out;
}

a.active svg.icon-nav {
  fill: $white;
}

.trending-movies-container {
  display: grid;
  // grid-template-columns: 1fr;
  grid-template-columns: repeat(10, 1fr);
  gap: 1rem;
}

.movies-container {
  display: grid;
  grid-template-columns: 1fr;
}

@media (min-width: 768px) {
  .trending-movies-container {
    // grid-template-columns: repeat(10, 1fr);
    gap: 2rem;
  }

  .movies-container {
    grid-template-columns: repeat(2, 1fr);
    gap: 2rem;
  }
}

@media (min-width: 978px) {
  .movies-container {
    grid-template-columns: repeat(3, 1fr);
  }
}

.card_element img {
  object-fit: cover;
}

